Home page completed

--- a/client/bookingui/src/components/navbar/navbar.css
+++ b/client/bookingui/src/components/navbar/navbar.css
@@ -9,6 +9,7 @@ body {
 }
 
 .navCointaner{
+    margin-top: 15px;
     width: 100%;
     max-width: 1024px;
     color: white;
@@ -19,13 +20,22 @@ body {
 }
 
 .logo{
-    font-weight: 500;
+    font-weight: 700;
+    font-size: 23px;
 }
 
 .navButton{
     margin-left: 20px;
     border: none;
     padding: 5px 10px;
+    padding: 10px;
+    border-radius: 20px;
     cursor: pointer;
-    color: #003580;
+    color:  #0071c2;
+    
+}
+.navButton:hover{
+background-color:#0071c2 ;
+color: white;
+
 }
