--- a/client/bookingui/src/components/featured/featured.css
+++ b/client/bookingui/src/components/featured/featured.css
@@ -16,6 +16,8 @@
     border-radius: 10px;
     overflow: hidden;
     z-index: 1;
+    color:rgba(255,255,255,1);
+    text-shadow: 0px 0px 25px #fbf8f8aa;
     
 }
 .featuredTitles{
