--- a/client/bookingui/src/components/searchItem/searchItem.css
+++ b/client/bookingui/src/components/searchItem/searchItem.css
@@ -82,3 +82,12 @@
     font-size: 12px;
     columns: gray;
 }
+.siCheckButton{
+    background-color: #0071c2;
+    color: white;
+    font-weight: bold;
+    padding: 10px 5px;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+}
