--- a/client/bookingui/src/pages/list/list.css
+++ b/client/bookingui/src/pages/list/list.css
@@ -12,7 +12,7 @@
 .listSearch{
     flex: 1;
     background-color: #febb02;
-    height: 500px;
+    height: max-content;
     padding: 10px;
     border-radius: 10px;
     position: sticky;
